--- a/index.html
+++ b/index.html
@@ -2803,7 +2803,10 @@
       <i class="fa fa-eye"></i>
       <span class="busuanzi-value" id="busuanzi_value_site_pv"></span>
     </span>
-  
+	
+    <span class="site-pv" title="苏ICP备17004952号-2">
+	    <a target="_blank" href="www.beian.miit.gov.cn">苏ICP备17004952号-2</a>
+    </span>
 </div>
 
 
