--- a/index.html
+++ b/index.html
@@ -2805,7 +2805,7 @@
     </span>
 	
     <span class="site-pv" title="苏ICP备17004952号-2">
-	    <a target="_blank" rel="noopener" href="www.beian.miit.gov.cn">苏ICP备17004952号-2</a>
+	    <a target="_blank" rel="noopener" href="http://www.beian.miit.gov.cn">苏ICP备17004952号-2</a>
     </span>
 </div>
 
